crates/forge_domain/src/snapshots/forge_domain__call_record__tests__display_failed_call.snap
---
source: crates/forge_domain/src/call_record.rs
expression: record.to_string()
snapshot_kind: text
---
<tool_result tool="fs_write">
  <arguments>
    <content>"Example content"</content>
    <overwrite>false</overwrite>
    <path>"/path/to/file.txt"</path>
  </arguments>
  <result>
    <error><![CDATA[
ERROR:
Caused by: Permission denied
]]></error>
  </result>
</tool_result>