crates/forge_domain/src/snapshots/forge_domain__call_record__tests__display_successful_call.snap
---
source: crates/forge_domain/src/call_record.rs
expression: record.to_string()
snapshot_kind: text
---
<tool_result tool="fs_read">
  <arguments>
    <path>"/example/file.txt"</path>
  </arguments>
  <result>
    <content><![CDATA[Contents of the file]]></content>
  </result>
</tool_result>