crates/forge_domain/src/snapshots/forge_domain__call_record__tests__display_with_special_chars.snap
---
source: crates/forge_domain/src/call_record.rs
expression: record.to_string()
snapshot_kind: text
---
<tool_result tool="test_tool">
  <arguments>
    <html>"<div>Test</div>"</html>
    <text>"Special chars: < > & ' \""</text>
  </arguments>
  <result>
    <content><![CDATA[Result with <tags> & special "characters"]]></content>
  </result>
</tool_result>